force-app/main/default/objects/Opportunity/fields/Integracao__c.field-meta.xml
<CustomField>
    <fullName>Integracao__c</fullName>
    <label>Plataforma Utilizada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>InHouse</fullName>
            </value>
            <value>
                <fullName>Shopify</fullName>
            </value>
            <value>
                <fullName>Shopify - Buda</fullName>
            </value>
            <value>
                <fullName>Shopify - CartX</fullName>
            </value>
            <value>
                <fullName>Woocommerce</fullName>
            </value>
            <value>
                <fullName>Magento</fullName>
            </value>
            <value>
                <fullName>Vtex</fullName>
            </value>
            <value>
                <fullName>PrestaShop</fullName>
            </value>
            <value>
                <fullName>OpenCart</fullName>
            </value>
            <value>
                <fullName>ACI</fullName>
            </value>
            <value>
                <fullName>Computop</fullName>
            </value>
            <value>
                <fullName>Salesforce CC</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>NuvemShop</fullName>
            </value>
            <value>
                <fullName>Loja Integrada</fullName>
            </value>
            <value>
                <fullName>Tray</fullName>
            </value>
            <value>
                <fullName>Get Commerce</fullName>
            </value>
            <value>
                <fullName>Outra</fullName>
            </value>
            <value>
                <fullName>InHouse / API</fullName>
            </value>
            <value>
                <fullName>PagBrasil.js</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Payment Link + API</fullName>
            </value>
            <value>
                <fullName>Paymentl LInk Offline</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>JS</fullName>
                <isActive>false</isActive>
                <label>JS</label>
            </value>
            <value>
                <fullName>Link de Pagamentos</fullName>
                <isActive>false</isActive>
                <label>Link de Pagamentos</label>
            </value>
            <value>
                <fullName>OutraSpecify</fullName>
                <isActive>false</isActive>
                <label>OutraSpecify</label>
            </value>
            <value>
                <fullName>PB Checkout</fullName>
                <isActive>false</isActive>
                <label>PB Checkout</label>
            </value>
            <value>
                <fullName>Shopify with Buda</fullName>
                <isActive>false</isActive>
                <label>Shopify with Buda</label>
            </value>
            <value>
                <fullName>Shopify with Cart Panda</fullName>
                <isActive>false</isActive>
                <label>Shopify with Cart Panda</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>