force-app/main/default/objects/Opportunity/fields/Integracao_Outra__c.field-meta.xml
<CustomField>
    <fullName>Integracao_Outra__c</fullName>
    <label>Outra</label>
    <length>80</length>
    <type>Text</type>
</CustomField>