force-app/main/default/objects/Opportunity/fields/IntegrationType__c.field-meta.xml
<CustomField>
    <fullName>IntegrationType__c</fullName>
    <label>Integration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IntegrationType</valueSetName>
    </valueSet>
</CustomField>