force-app/main/default/objects/Opportunity/fields/IntegrationTypeSpecify__c.field-meta.xml
<CustomField>
    <fullName>IntegrationTypeSpecify__c</fullName>
    <inlineHelpText>Specify the Integration Type</inlineHelpText>
    <label>Integration Type Specify</label>
    <length>30</length>
    <type>Text</type>
</CustomField>