force-app/main/default/objects/Opportunity/fields/Is_Opportunity_Hybrid__c.field-meta.xml
<CustomField>
    <fullName>Is_Opportunity_Hybrid__c</fullName>
    <formula>AND(
				INCLUDES(BusinessModel__c, &quot;Intermediation&quot;),
				INCLUDES(BusinessModel__c, &quot;Gateway&quot;)
)</formula>
    <label>Hybrid?</label>
    <type>Checkbox</type>
</CustomField>