force-app/main/default/objects/Opportunity/fields/Is_Opportunity_Valid__c.field-meta.xml
<CustomField>
    <fullName>Is_Opportunity_Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Opportunity Valid?</label>
    <type>Checkbox</type>
</CustomField>