force-app/main/default/objects/Opportunity/fields/KYC_NB_Number__c.field-meta.xml
<CustomField>
    <fullName>KYC_NB_Number__c</fullName>
    <description>KYC Number do KYC criado a partir desta oportunidade.</description>
    <label>KYC_NB Number</label>
    <type>TextArea</type>
</CustomField>