force-app/main/default/objects/Opportunity/fields/KYC_XB_Number__c.field-meta.xml
<CustomField>
    <fullName>KYC_XB_Number__c</fullName>
    <label>KYC_XB Number</label>
    <type>TextArea</type>
</CustomField>