force-app/main/default/objects/Opportunity/fields/LeadCreationDate__c.field-meta.xml
<CustomField>
    <fullName>LeadCreationDate__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Creation Date</label>
    <type>Date</type>
</CustomField>