force-app/main/default/objects/Opportunity/fields/LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn__c</fullName>
    <label>LinkedIn da empresa</label>
    <type>Url</type>
</CustomField>