force-app/main/default/objects/Opportunity/fields/LinkedInContato__c.field-meta.xml
<CustomField>
    <fullName>LinkedInContato__c</fullName>
    <label>LinkedIn do contato</label>
    <type>Url</type>
</CustomField>