force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Non Responsive – Unable to Qualify</fullName>
            </value>
            <value>
                <fullName>Non responsive – Qualified</fullName>
            </value>
            <value>
                <fullName>Refused - Prohibited Category</fullName>
            </value>
            <value>
                <fullName>Refused – Minimum Revenue</fullName>
            </value>
            <value>
                <fullName>Refused – Not a Business Customer</fullName>
            </value>
            <value>
                <fullName>Refused - Digital Immature Customer</fullName>
            </value>
            <value>
                <fullName>Refused - Tax Havens</fullName>
            </value>
            <value>
                <fullName>Refused - Not investing in Brazil</fullName>
            </value>
            <value>
                <fullName>Platform not Supported</fullName>
            </value>
            <value>
                <fullName>Feature not Supported</fullName>
            </value>
            <value>
                <fullName>Fees</fullName>
            </value>
            <value>
                <fullName>Settlement terms</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Project On hold</fullName>
            </value>
            <value>
                <fullName>Coverage</fullName>
            </value>
            <value>
                <fullName>Terminated – Desinvesting in Brazil</fullName>
            </value>
            <value>
                <fullName>Terminated – Changed to competitor</fullName>
            </value>
            <value>
                <fullName>Terminated – Risk Department</fullName>
            </value>
            <value>
                <fullName>Terminated – Inactive</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Duplicate Log</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>