force-app/main/default/objects/Opportunity/fields/Marketing__c.field-meta.xml
<CustomField>
    <fullName>Marketing__c</fullName>
    <inlineHelpText>Descrever como o cliente gera tráfego para o site</inlineHelpText>
    <label>Marketing (Canais)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>