force-app/main/default/objects/Opportunity/fields/Metodos_Pagamento__c.field-meta.xml
<CustomField>
    <fullName>Metodos_Pagamento__c</fullName>
    <label>Métodos de Pagamento a Utilizar</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boleto Flash</fullName>
                <label>Boleto Flash®</label>
            </value>
            <value>
                <fullName>Pix</fullName>
            </value>
            <value>
                <fullName>Cartão de Crédito Nacional</fullName>
            </value>
            <value>
                <fullName>Cartão de Débito Nacional</fullName>
            </value>
            <value>
                <fullName>Link de Pagamento</fullName>
            </value>
            <value>
                <fullName>PEC Express</fullName>
                <label>PEC Flash</label>
            </value>
            <value>
                <fullName>Transferência Bancária Online</fullName>
            </value>
            <value>
                <fullName>Payout</fullName>
            </value>
            <value>
                <fullName>POS Mobile</fullName>
            </value>
            <value>
                <fullName>Pix Roaming</fullName>
            </value>
            <value>
                <fullName>Google Pay</fullName>
            </value>
            <value>
                <fullName>Boleto Bancário</fullName>
                <isActive>false</isActive>
                <label>Boleto Bancário</label>
            </value>
            <value>
                <fullName>Transferência Bancária/Depósito</fullName>
                <isActive>false</isActive>
                <label>Transferência Bancária/Depósito</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>