force-app/main/default/objects/Opportunity/fields/Modelo_Negocio__c.field-meta.xml
<CustomField>
    <fullName>Modelo_Negocio__c</fullName>
    <label>Modelo de Negócio Desejado</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intermediacao</fullName>
            </value>
            <value>
                <fullName>Gateway</fullName>
            </value>
            <value>
                <fullName>Pix Internacional</fullName>
            </value>
            <value>
                <fullName>Pix Roaming</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>