force-app/main/default/objects/Opportunity/fields/Moeda__c.field-meta.xml
<CustomField>
    <fullName>Moeda__c</fullName>
    <label>Remittance Currency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BRL</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>