force-app/main/default/objects/Opportunity/fields/NationalPaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>NationalPaymentMethod__c</fullName>
    <label>Payment Methods</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NationalPaymentMethod</valueSetName>
    </valueSet>
</CustomField>