force-app/main/default/objects/Opportunity/fields/nb_previsao_faturamento__c.field-meta.xml
<CustomField>
    <fullName>nb_previsao_faturamento__c</fullName>
    <label>NB - Previsão de faturamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Até R$10 mil</fullName>
            </value>
            <value>
                <fullName>R$10 mil até R$30 mil</fullName>
            </value>
            <value>
                <fullName>R$30 mil até R$50 mil</fullName>
            </value>
            <value>
                <fullName>R$50 mil até R$100 mil</fullName>
            </value>
            <value>
                <fullName>Acima de R$100 mil</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>