force-app/main/default/objects/Opportunity/fields/Negotiation_Completed__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Negotiation Completed: Proposal Accepted</label>
    <type>Checkbox</type>
</CustomField>