force-app/main/default/objects/Opportunity/fields/NotaReclameAqui__c.field-meta.xml
<CustomField>
    <fullName>NotaReclameAqui__c</fullName>
    <label>Nota Reclame Aqui</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>