force-app/main/default/objects/Opportunity/fields/OpportunityKYCLegalApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>OpportunityKYCLegalApprovalStatus__c</fullName>
    <label>Opportunity KYC Legal Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LegalApprovalStatus</valueSetName>
    </valueSet>
</CustomField>