force-app/main/default/objects/Opportunity/fields/OpportunityRCCLegalApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>OpportunityRCCLegalApprovalStatus__c</fullName>
    <label>Opportunity RCC Legal Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LegalApprovalStatus</valueSetName>
    </valueSet>
</CustomField>