force-app/main/default/objects/Opportunity/fields/Other_Payments_Settlement_Frequency_1__c.field-meta.xml
<CustomField>
    <fullName>Other_Payments_Settlement_Frequency_1__c</fullName>
    <label>Other Payments Settlement Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Biweekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>