force-app/main/default/objects/Opportunity/fields/Other_Platform__c.field-meta.xml
<CustomField>
    <fullName>Other_Platform__c</fullName>
    <label>Other</label>
    <length>80</length>
    <type>Text</type>
</CustomField>