force-app/main/default/objects/Opportunity/fields/PagShield_Premium_On_Demand__c.field-meta.xml
<CustomField>
    <fullName>PagShield_Premium_On_Demand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PagShield Premium On Demand</label>
    <type>Checkbox</type>
</CustomField>