force-app/main/default/objects/Opportunity/fields/PaymentRecurrence__c.field-meta.xml
<CustomField>
    <fullName>PaymentRecurrence__c</fullName>
    <inlineHelpText>Already works with recurring payments?</inlineHelpText>
    <label>Recurring Payments?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>Não</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>