force-app/main/default/objects/Opportunity/fields/Payout__c.field-meta.xml
<CustomField>
    <fullName>Payout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payout</label>
    <type>Checkbox</type>
</CustomField>