force-app/main/default/objects/Opportunity/fields/PCI_DSS__c.field-meta.xml
<CustomField>
    <fullName>PCI_DSS__c</fullName>
    <description>Informar se a empresa cumpre os requisitos PCI DSS.</description>
    <inlineHelpText>Informar se a empresa cumpre os requisitos PCI DSS.</inlineHelpText>
    <label>Atende os requisitos PCI DSS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>