force-app/main/default/objects/Opportunity/fields/Pix_Automatico__c.field-meta.xml
<CustomField>
    <fullName>Pix_Automatico__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pix Automático</label>
    <type>Checkbox</type>
</CustomField>