force-app/main/default/objects/Opportunity/fields/PixOneClick__c.field-meta.xml
<CustomField>
    <fullName>PixOneClick__c</fullName>
    <defaultValue>false</defaultValue>
    <label>1-Click Pix</label>
    <type>Checkbox</type>
</CustomField>