force-app/main/default/objects/Opportunity/fields/Preco_Maximo__c.field-meta.xml
<CustomField>
    <fullName>Preco_Maximo__c</fullName>
    <label>Preço Máximo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>