force-app/main/default/objects/Opportunity/fields/Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language__c</fullName>
    <label>Preferred Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Mandarin</fullName>
            </value>
            <value>
                <fullName>Hindi</fullName>
            </value>
            <value>
                <fullName>Arabic</fullName>
            </value>
            <value>
                <fullName>Portuguese (Brazil)</fullName>
            </value>
            <value>
                <fullName>Portuguese (Portugal)</fullName>
            </value>
            <value>
                <fullName>Bengali</fullName>
            </value>
            <value>
                <fullName>Russian</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Punjabi</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Javanese</fullName>
            </value>
            <value>
                <fullName>Wu (Shanghainese)</fullName>
            </value>
            <value>
                <fullName>Malay/Indonesian</fullName>
            </value>
            <value>
                <fullName>Telugu</fullName>
            </value>
            <value>
                <fullName>Vietnamese</fullName>
            </value>
            <value>
                <fullName>Korean</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Marathi</fullName>
            </value>
            <value>
                <fullName>Turkish</fullName>
            </value>
            <value>
                <fullName>Tamil</fullName>
            </value>
            <value>
                <fullName>Urdu</fullName>
            </value>
            <value>
                <fullName>Persian (Farsi)</fullName>
            </value>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>Thai</fullName>
            </value>
            <value>
                <fullName>Gujarati</fullName>
            </value>
            <value>
                <fullName>Jin Chinese</fullName>
            </value>
            <value>
                <fullName>Southern Min (includes Hokkien and Teochew)</fullName>
            </value>
            <value>
                <fullName>Polish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>