force-app/main/default/objects/Opportunity/fields/previs_fat_rs__c.field-meta.xml
<CustomField>
    <fullName>previs_fat_rs__c</fullName>
    <description>Qual é a previsão de faturamento mensal (R$) do lead no momento de qualificação?</description>
    <inlineHelpText>Total processed volume expected via PagBrasil</inlineHelpText>
    <label>PagBrasil TPV</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>