force-app/main/default/objects/Opportunity/fields/Previs_o_de_Faturamento__c.field-meta.xml
<CustomField>
    <fullName>Previs_o_de_Faturamento__c</fullName>
    <label>Previsão de Faturamento</label>
    <length>50</length>
    <type>Text</type>
</CustomField>