force-app/main/default/objects/Opportunity/fields/Product_or_service_website_URL__c.field-meta.xml
<CustomField>
    <fullName>Product_or_service_website_URL__c</fullName>
    <inlineHelpText>Site em que o produto ou serviço será comercializado. Mesmo que o KYC.</inlineHelpText>
    <label>Website URL</label>
    <type>Url</type>
</CustomField>