force-app/main/default/objects/Opportunity/fields/ProductClass__c.field-meta.xml
<CustomField>
    <fullName>ProductClass__c</fullName>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductClass</valueSetName>
    </valueSet>
</CustomField>