force-app/main/default/objects/Opportunity/fields/PSP__c.field-meta.xml
<CustomField>
    <fullName>PSP__c</fullName>
    <inlineHelpText>Current payment processor used by the retailer</inlineHelpText>
    <label>PSP</label>
    <length>50</length>
    <type>Text</type>
</CustomField>