force-app/main/default/objects/Opportunity/fields/qual_cliente_indicou__c.field-meta.xml
<CustomField>
    <fullName>qual_cliente_indicou__c</fullName>
    <inlineHelpText>Describe the name of the opportunity that made this referral, if the source above is &quot;customer referral&quot;</inlineHelpText>
    <label>Which customer referred?</label>
    <type>TextArea</type>
</CustomField>