force-app/main/default/objects/Opportunity/fields/QualificacaoLead__c.field-meta.xml
<CustomField>
    <fullName>QualificacaoLead__c</fullName>
    <label>Qualificação do Lead</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>