force-app/main/default/objects/Opportunity/fields/Qualificador__c.field-meta.xml
<CustomField>
    <fullName>Qualificador__c</fullName>
    <label>Qualifier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound_AM</fullName>
            </value>
            <value>
                <fullName>Inbound_FM</fullName>
            </value>
            <value>
                <fullName>Inbound_GM</fullName>
            </value>
            <value>
                <fullName>Inbound_HL</fullName>
            </value>
            <value>
                <fullName>Inbound_JL</fullName>
            </value>
            <value>
                <fullName>Inbound_LB</fullName>
            </value>
            <value>
                <fullName>Inbound_MG</fullName>
            </value>
            <value>
                <fullName>Inbound_MV</fullName>
            </value>
            <value>
                <fullName>Inbound_PC</fullName>
            </value>
            <value>
                <fullName>Inbound_RN</fullName>
            </value>
            <value>
                <fullName>Inbound_TN</fullName>
            </value>
            <value>
                <fullName>Inbound_YK</fullName>
            </value>
            <value>
                <fullName>Inbound_PM</fullName>
            </value>
            <value>
                <fullName>Inbound_VC</fullName>
            </value>
            <value>
                <fullName>Outbound_AM</fullName>
            </value>
            <value>
                <fullName>Outbound_FM</fullName>
            </value>
            <value>
                <fullName>Outbound_GM</fullName>
            </value>
            <value>
                <fullName>Outbound_HL</fullName>
            </value>
            <value>
                <fullName>Outbound_JL</fullName>
            </value>
            <value>
                <fullName>Outbound_LB</fullName>
            </value>
            <value>
                <fullName>Outbound_MG</fullName>
            </value>
            <value>
                <fullName>Outbound_MV</fullName>
            </value>
            <value>
                <fullName>Outbound_PC</fullName>
            </value>
            <value>
                <fullName>Outbound_RN</fullName>
            </value>
            <value>
                <fullName>Outbound_TN</fullName>
            </value>
            <value>
                <fullName>Outbound_YK</fullName>
            </value>
            <value>
                <fullName>Outbound_PM</fullName>
            </value>
            <value>
                <fullName>Outbound_VC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Inbound_AO</fullName>
                <isActive>false</isActive>
                <label>Inbound_AO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>