force-app/main/default/objects/Opportunity/fields/Quotes_Amount__c.field-meta.xml
<CustomField>
    <fullName>Quotes_Amount__c</fullName>
    <label>Quotes Amount</label>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>