force-app/main/default/objects/Opportunity/fields/Receita_Mensal__c.field-meta.xml
<CustomField>
    <fullName>Receita_Mensal__c</fullName>
    <inlineHelpText>Clientes Brasileiros - Receita Total/
Clientes Cross-Border - Receita no Brasil</inlineHelpText>
    <label>Receita Mensal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Até R$50k</fullName>
            </value>
            <value>
                <fullName>R$50k até R$100k</fullName>
            </value>
            <value>
                <fullName>R$100k até R$200k</fullName>
            </value>
            <value>
                <fullName>R$200k até R$500k</fullName>
            </value>
            <value>
                <fullName>R$500k até 1M</fullName>
            </value>
            <value>
                <fullName>Acima de R$1M</fullName>
            </value>
            <value>
                <fullName>Ainda não tem operação online</fullName>
            </value>
            <value>
                <fullName>Não vende para o Brasil ainda.</fullName>
            </value>
            <value>
                <fullName>R$100k até R$500k</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>