force-app/main/default/objects/Opportunity/fields/Reembolso__c.field-meta.xml
<CustomField>
    <fullName>Reembolso__c</fullName>
    <label>Taxa de Reembolso Atual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>